# RodenZ

./: .gitignore  readme.md
Examples/: smoothing_parameters.json
Examples/Calibration/: calibration.toml
Examples/DLCPipeline/: bodyparts.txt
Examples/DLCPipeline/inference_videos/: sample_video.avi
Examples/DLCPipeline/labeled_data/Cam_1/Wildtype_EV_11_Vglut2-cre-eOPN3_M_Week8_Opto-On_3DOPF_Cam1_On-Off/: CollectedData_Knorrsche.csv
Examples/DLCPipeline/labeled_data/Cam_2/Wildtype_EV_6_Vglut2-cre-somBiPOLES_M_Baseline_Opto-Off_3DOF_Cam2/: CollectedData_Knorrsche.csv
Examples/DLCPipeline/labeled_data/Cam_3/Wildtype_EV_21_Vglut2-cre-eOPN3_M_Week8_Opto-On_3DOF_Cam3_On-Off/: CollectedData_Knorrsche.csv
Examples/DLCPipeline/labeled_data/Cam_4/Wildtype_EV_16_Vglut2-cre-eOPN3_M_Week8_Opto-On_3DOPF_Cam4_On-Off/: CollectedData_Knorrsche.csv
Examples/Triangulation/: Cam_1.csv  Cam_1.h5  Cam_3.csv  Cam_3.h5  triangulated_3d.csv
code/: .gitignore  build.sh  dev.sh  readme.md
code/Libraries/RZTrainingPipeline/: README.md  pyproject.toml
code/Libraries/RZTrainingPipeline/src/RZTrainingPipeline/: config.py  data_cloner.py  utils.py
code/Libraries/RZVisuals/: LICENSE  README.md  pyproject.toml
code/Libraries/RZVisuals/src/RZVisuals/: BaseDisplay.py  Camera.py  DisplayConfig.py  Observer.py  Renderer.py  Shader.py  __init__.py
code/Tools/RZBayesianReconstruction/: README.md  pyproject.toml
code/Tools/RZBayesianReconstruction/src/RZBayesianReconstruction/: __init__.py  __main__.py
code/Tools/RZBayesianReconstruction/src/RZBayesianReconstruction/Models/: Observers.py  SkeletonTransitionModel.py  SkeletonTriangulationModel.py  __init__.py
code/Tools/RZBayesianReconstruction/src/RZBayesianReconstruction/Skeleton/: ParameterMap.py  RodentSkeleton.py  __init__.py
code/Tools/RZBayesianReconstruction/src/RZBayesianReconstruction/Smoother/: MeasurementModel.py  SigmaPointGeneration.py  Smoother.py  TransitionModel.py  UKFObserver.py  UKFPredictor.py  __init__.py
code/Tools/RZBayesianReconstruction/src/RZBayesianReconstruction/Util/: ListShelf.py  __init__.py  camexport.py  loading.py  reproject.py
code/Tools/RZCameraCalibration/: README.md  pyproject.toml
code/Tools/RZCameraCalibration/src/RZCameraCalibration/: __main__.py
code/Tools/RZCameraExtrinsicsTool/: README.md  pyproject.toml
code/Tools/RZCameraExtrinsicsTool/src/RZCameraExtrinsicsTool/: CameraExtrinsicsToolDisplay.py  __main__.py
code/Tools/RZCorrect2D/: README.md  pyproject.toml
code/Tools/RZCorrect2D/src/RZCorrect2D/: __main__.py
code/Tools/RZEvaluate/: README.md  pyproject.toml
code/Tools/RZEvaluate/src/RZEvaluate/: plotter.py  sharer.py
code/Tools/RZTrainDLC/: README.md  pyproject.toml
code/Tools/RZTrainDLC/src/RZTrainDLC/: __main__.py  inference.py
code/Tools/RZTriangulation/: README.md  pyproject.toml
code/Tools/RZTriangulation/src/RZTriangulation/: __main__.py
code/Tools/RZView2DCSV/: README.md  pyproject.toml
code/Tools/RZView2DCSV/src/RZView2DCSV/: __main__.py
code/Tools/RZView3DCSV/: README.md  pyproject.toml
code/Tools/RZView3DCSV/src/RZView3DCSV/: MouseDisplay.py  __main__.py
eval_dataset_mouse/: README.md  bundle_adjustment_reconstruct.sh  calibration.toml  correct.sh  evaluation.sh  smoother_reconstruct_low.sh
eval_dataset_mouse/config/: Cam1.json  Cam2.json  Cam3.json  Cam4.json  skeleton.json  smoothing_parameters_low_movement.json
paper/: main.tex  references.bib
