[project]
name = "RZCameraCalibration"
version = "0.1.0"
authors = [
  { name="Sandro Paval", email="sandro.paval@study.thws.de" },
]
description = "A tool for calibrating multiple cameras using Charuco boards and Anipose."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]
license-files = ["LICENCSE.txt"]

# === DEPENDENCIES USED BY YOUR CODE ===
dependencies = [
  "numpy",
  "Pillow",
  "opencv-python",
  "aniposelib",
  "pyyaml",
  "scipy",
]

[project.scripts]
rzcal = "RZCameraCalibration.__main__:main"

[project.urls]
Homepage = "https://github.com/thws-mai/PM25_Mice"
Issues = "https://github.com/thws-mai/PM25_Mice/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
