[project]
name = "RZEvaluate"
version = "0.1.0"
authors = [
  { name="Sandro Paval", email="sandro.paval@study.thws.de" },
]
description = "A GUI for evaluating reprojected 2D data and ground truth 2D labels."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]
license-files = ["LICENSE.txt"]

# === DEPENDENCIES REQUIRED BY YOUR CODE ===
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
]

[project.scripts]
rzshare = "RZEvaluate.sharer:main"
rzplot = "RZEvaluate.plotter:main"

[project.urls]
Homepage = "https://github.com/thws-mai/PM25_Mice"
Issues = "https://github.com/thws-mai/PM25_Mice/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
