[project]
name = "RZTriangulation"
version = "0.1.0"
authors = [
  { name="Sandro Paval", email="sandro.paval@study.thws.de" },
]
description = "CLI Tool for triangulation of mice keypoints."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "tqdm",
  "anipose",
  "tables"
]

[project.urls]
Homepage = "https://github.com/thws-mai/PM25_Mice"
Issues = "https://github.com/thws-mai/PM25_Mice/issues"

[project.scripts]
rztriangulate = "RZTriangulation.__main__:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
